[package]
authors = ["Nick Hirakawa <nickhirakawa@gmail.com>"]
edition = "2018"
name = "advent-of-code"
version = "0.1.0"

[dependencies]
clap = "2.33.3"
env_logger = "0.8.4"
log = "0.4.14"
nom = "7.0.0"
multimap = "0.8.3"
multiset = "0.0.5"
regex = "1.7.0"
itertools = "0.10.1"
uuid = {version = "0.8.2", features = ["serde", "v4"]}
petgraph = "0.6.5"
