[package]
authors = ["Nick Hirakawa <nickhirakawa@gmail.com>"]
edition = "2018"
name = "advent-of-code-2018"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
nom = "6.0.1"
multiset = "0.0.5"
