[package]
authors = ["Nick Hirakawa <nickhirakawa@gmail.com>"]
edition = "2018"
name = "advent-of-code-2019"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
common = {path = "../common"}

log = "0.4.14"
multimap = "0.8.3"
multiset = "0.0.5"
nom = "6.0.1"
