[package]
authors = ["Nick Hirakawa <nickhirakawa@gmail.com>"]
edition = "2018"
name = "runner"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
advent-of-code-2016 = { path = "../advent-of-code-2016" }
advent-of-code-2015 = { path = "../advent-of-code-2015" }
advent-of-code-2018 = { path = "../advent-of-code-2018" }
advent-of-code-2019 = { path = "../advent-of-code-2019" }
advent-of-code-2020 = { path = "../advent-of-code-2020" }
advent-of-code-2021 = { path = "../advent-of-code-2021" }
advent-of-code-2022 = { path = "../advent-of-code-2022" }
clap = "2.33.3"
common = { path = "../common" }
env_logger = "0.8.4"
log = "0.4.14"
